--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format.-sql=true
-spring.jpa.defer-datasource-initialization=true 
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:mysql://localhost/groep3
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
