--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Sensitive Data ###
+*.properties
+src/main/resources/application.properties
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
