--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.jpa.properties.hibernate.format.-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:mysql://localhost/groep3
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=secretpassword
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
