--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,9 @@ jobs:
       run: |
         sudo /etc/init.d/mysql start
         mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+    - name: Add secrets to tests
+      run: printf ${{secrets.SPRING_DATASOURCE_PASSWORD}} >> src/main/resources/application.properties
+      shell: bash
     - name: Build with Maven
       run: mvn clean install
     - name: Test with Maven
