--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format.-sql=true
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://localhost/groep3
-spring.datasource.username=root
-spring.datasource.password=secretpassword
+spring.datasource.url=jdbc:mysql://groep3.cdtxccf6ihsi.eu-central-1.rds.amazonaws.com:3306/groep3
+spring.datasource.username=admin
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
+spring.datasource.password=
