--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-spring.main.allow-bean-definition-overriding=true
+server.port=8082
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql: true
-spring.jpa.properties.hibernate.format.-sql=true
+spring.datasource.url=jdbc:mysql://localhost/groep3
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://localhost:3306/groep3
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.sql.init.mode=always
 
+spring.datasource.username=root
+spring.datasource.password=secretpassword
+
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql: true
+spring.main.allow-bean-definition-overriding=true
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.sql.init.mode=always
