--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost/groep3
 spring.jpa.defer-datasource-initialization=true
 
 spring.datasource.username=root
-spring.datasource.password=secretpassword
+spring.datasource.password=root
 
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.main.allow-bean-definition-overriding=true
 
